objects/FieloEE__Branch__c.object
<CustomObject>
    <description>Your businessâ€™ branches or points of sale where members can generate points.</description>
    <fields>
        <fullName>FieloEE__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__City__c</fullName>
        <description>City where the branch is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the city where your branch is located.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Code__c</fullName>
        <description>The branch code. It can be filled with a branch number or just enter a name for each branch.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Enter a code that will uniquely identify this branch.</inlineHelpText>
        <label>Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Country__c</fullName>
        <description>Country where the branch is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the country where your branch is located.</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Latitude__c</fullName>
        <description>The latitude coordinates of this branch. This field will autocomplete after you enter your branch address.</description>
        <inlineHelpText>This field will autocomplete after you enter your branch address.</inlineHelpText>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Longitude__c</fullName>
        <description>The longitude coordinates of this branch. This field will autocomplete after you enter your branch address.</description>
        <inlineHelpText>This field will autocomplete after you enter your branch address.</inlineHelpText>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__State__c</fullName>
        <description>State where the branch is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the state or province where your branch is located.</inlineHelpText>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Street__c</fullName>
        <description>Street where this branch is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the street where your branch is located.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ZipCode__c</fullName>
        <description>Zip code of the branch address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the ZIP code for your branch.</inlineHelpText>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>FieloEE__All</fullName>
        <columns>FieloEE__Code__c</columns>
        <columns>NAME</columns>
        <columns>FieloEE__Street__c</columns>
        <columns>FieloEE__City__c</columns>
        <columns>FieloEE__State__c</columns>
        <columns>FieloEE__Country__c</columns>
        <columns>FieloEE__Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FieloEE__All_Branches</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Branches</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>